Fixed logo
it stretched, not anymore

--- a/Base.css
+++ b/Base.css
@@ -115,7 +115,7 @@ footer{
     li{
         margin: 0 auto;
     }
-    ul img{
+    nav ul img{
         height: 2em;
         width: auto;
         padding: .2em;
